examples/kubernetes/connectivity-check/connectivity-check-hostport.yaml
# Automatically generated by Makefile. DO NOT EDIT
---
metadata:
  name: echo-a
  labels:
    name: echo-a
    topology: any
    component: network-check
    traffic: internal
    quarantine: "false"
    type: autocheck
spec:
  template:
    metadata:
      labels:
        name: echo-a
    spec:
      hostNetwork: false
      containers:
      - name: echo-a-container
        ports:
        - containerPort: 8080
        image: docker.io/cilium/json-mock:1.2
        imagePullPolicy: IfNotPresent
        readinessProbe:
          timeoutSeconds: 7
          exec:
            command:
            - curl
            - -sS
            - --fail
            - --connect-timeout
            - "5"
            - -o
            - /dev/null
            - localhost:8080
        livenessProbe:
          timeoutSeconds: 7
          exec:
            command:
            - curl
            - -sS
            - --fail
            - --connect-timeout
            - "5"
            - -o
            - /dev/null
            - localhost:8080
  selector:
    matchLabels:
      name: echo-a
  replicas: 1
apiVersion: apps/v1
kind: Deployment
---
metadata:
  name: echo-b
  labels:
    name: echo-b
    topology: any
    component: services-check
    traffic: internal
    quarantine: "false"
    type: autocheck
spec:
  template:
    metadata:
      labels:
        name: echo-b
    spec:
      hostNetwork: false
      containers:
      - name: echo-b-container
        ports:
        - containerPort: 8080
          hostPort: 40000
        image: docker.io/cilium/json-mock:1.2
        imagePullPolicy: IfNotPresent
        readinessProbe:
          timeoutSeconds: 7
          exec:
            command:
            - curl
            - -sS
            - --fail
            - --connect-timeout
            - "5"
            - -o
            - /dev/null
            - localhost:8080
        livenessProbe:
          timeoutSeconds: 7
          exec:
            command:
            - curl
            - -sS
            - --fail
            - --connect-timeout
            - "5"
            - -o
            - /dev/null
            - localhost:8080
  selector:
    matchLabels:
      name: echo-b
  replicas: 1
apiVersion: apps/v1
kind: Deployment
---
metadata:
  name: echo-b-host
  labels:
    name: echo-b-host
    topology: any
    component: services-check
    traffic: internal
    quarantine: "false"
    type: autocheck
spec:
  template:
    metadata:
      labels:
        name: echo-b-host
    spec:
      hostNetwork: true
      containers:
      - name: echo-b-host-container
        ports: []
        image: docker.io/cilium/json-mock:1.2
        imagePullPolicy: IfNotPresent
        readinessProbe:
          timeoutSeconds: 7
          exec:
            command:
            - curl
            - -sS
            - --fail
            - --connect-timeout
            - "5"
            - -o
            - /dev/null
            - localhost:41000
        livenessProbe:
          timeoutSeconds: 7
          exec:
            command:
            - curl
            - -sS
            - --fail
            - --connect-timeout
            - "5"
            - -o
            - /dev/null
            - localhost:41000
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: name
                operator: In
                values:
                - echo-b
            topologyKey: kubernetes.io/hostname
  selector:
    matchLabels:
      name: echo-b-host
  replicas: 1
apiVersion: apps/v1
kind: Deployment
---
metadata:
  name: echo-c
  labels:
    name: echo-c
    topology: any
    component: proxy-check
    traffic: internal
    quarantine: "false"
    type: autocheck
spec:
  template:
    metadata:
      labels:
        name: echo-c
    spec:
      hostNetwork: false
      containers:
      - name: echo-c-container
        ports:
        - containerPort: 8080
          hostPort: 40001
        image: docker.io/cilium/json-mock:1.2
        imagePullPolicy: IfNotPresent
        readinessProbe:
          timeoutSeconds: 7
          exec:
            command:
            - curl
            - -sS
            - --fail
            - --connect-timeout
            - "5"
            - -o
            - /dev/null
            - localhost:8080
        livenessProbe:
          timeoutSeconds: 7
          exec:
            command:
            - curl
            - -sS
            - --fail
            - --connect-timeout
            - "5"
            - -o
            - /dev/null
            - localhost:8080
  selector:
    matchLabels:
      name: echo-c
  replicas: 1
apiVersion: apps/v1
kind: Deployment
---
metadata:
  name: echo-c-host
  labels:
    name: echo-c-host
    topology: any
    component: proxy-check
    traffic: internal
    quarantine: "false"
    type: autocheck
spec:
  template:
    metadata:
      labels:
        name: echo-c-host
    spec:
      hostNetwork: true
      containers:
      - name: echo-c-host-container
        ports: []
        image: docker.io/cilium/json-mock:1.2
        imagePullPolicy: IfNotPresent
        readinessProbe:
          timeoutSeconds: 7
          exec:
            command:
            - curl
            - -sS
            - --fail
            - --connect-timeout
            - "5"
            - -o
            - /dev/null
            - localhost:41001
        livenessProbe:
          timeoutSeconds: 7
          exec:
            command:
            - curl
            - -sS
            - --fail
            - --connect-timeout
            - "5"
            - -o
            - /dev/null
            - localhost:41001
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: name
                operator: In
                values:
                - echo-c
            topologyKey: kubernetes.io/hostname
  selector:
    matchLabels:
      name: echo-c-host
  replicas: 1
apiVersion: apps/v1
kind: Deployment
---
metadata:
  name: pod-to-a
  labels:
    name: pod-to-a
    topology: any
    component: network-check
    traffic: internal
    quarantine: "false"
    type: autocheck
spec:
  template:
    metadata:
      labels:
        name: pod-to-a
    spec:
      hostNetwork: false
      containers:
      - name: pod-to-a-container
        ports: []
        image: docker.io/byrnedo/alpine-curl:0.1.8
        imagePullPolicy: IfNotPresent
        command:
        - /bin/ash
        - -c
        - sleep 1000000000
        readinessProbe:
          timeoutSeconds: 7
          exec:
            command:
            - curl
            - -sS
            - --fail
            - --connect-timeout
            - "5"
            - -o
            - /dev/null
            - echo-a:8080/public
        livenessProbe:
          timeoutSeconds: 7
          exec:
            command:
            - curl
            - -sS
            - --fail
            - --connect-timeout
            - "5"
            - -o
            - /dev/null
            - echo-a:8080/public
  selector:
    matchLabels:
      name: pod-to-a
  replicas: 1
apiVersion: apps/v1
kind: Deployment
---
metadata:
  name: pod-to-external-1111
  labels:
    name: pod-to-external-1111
    topology: any
    component: network-check
    traffic: external
    quarantine: "false"
    type: autocheck
spec:
  template:
    metadata:
      labels:
        name: pod-to-external-1111
    spec:
      hostNetwork: false
      containers:
      - name: pod-to-external-1111-container
        ports: []
        image: docker.io/byrnedo/alpine-curl:0.1.8
        imagePullPolicy: IfNotPresent
        command:
        - /bin/ash
        - -c
        - sleep 1000000000
        readinessProbe:
          timeoutSeconds: 7
          exec:
            command:
            - curl
            - -sS
            - --fail
            - --connect-timeout
            - "5"
            - -o
            - /dev/null
            - 1.1.1.1
        livenessProbe:
          timeoutSeconds: 7
          exec:
            command:
            - curl
            - -sS
            - --fail
            - --connect-timeout
            - "5"
            - -o
            - /dev/null
            - 1.1.1.1
  selector:
    matchLabels:
      name: pod-to-external-1111
  replicas: 1
apiVersion: apps/v1
kind: Deployment
---
metadata:
  name: pod-to-a-denied-cnp
  labels:
    name: pod-to-a-denied-cnp
    topology: any
    component: policy-check
    traffic: internal
    quarantine: "false"
    type: autocheck
spec:
  template:
    metadata:
      labels:
        name: pod-to-a-denied-cnp
    spec:
      hostNetwork: false
      containers:
      - name: pod-to-a-denied-cnp-container
        ports: []
        image: docker.io/byrnedo/alpine-curl:0.1.8
        imagePullPolicy: IfNotPresent
        command:
        - /bin/ash
        - -c
        - sleep 1000000000
        readinessProbe:
          timeoutSeconds: 7
          exec:
            command:
            - ash
            - -c
            - '! curl -s --fail --connect-timeout 5 -o /dev/null echo-a:8080/private'
        livenessProbe:
          timeoutSeconds: 7
          exec:
            command:
            - ash
            - -c
            - '! curl -s --fail --connect-timeout 5 -o /dev/null echo-a:8080/private'
  selector:
    matchLabels:
      name: pod-to-a-denied-cnp
  replicas: 1
apiVersion: apps/v1
kind: Deployment
---
metadata:
  name: pod-to-a-allowed-cnp
  labels:
    name: pod-to-a-allowed-cnp
    topology: any
    component: policy-check
    traffic: internal
    quarantine: "false"
    type: autocheck
spec:
  template:
    metadata:
      labels:
        name: pod-to-a-allowed-cnp
    spec:
      hostNetwork: false
      containers:
      - name: pod-to-a-allowed-cnp-container
        ports: []
        image: docker.io/byrnedo/alpine-curl:0.1.8
        imagePullPolicy: IfNotPresent
        command:
        - /bin/ash
        - -c
        - sleep 1000000000
        readinessProbe:
          timeoutSeconds: 7
          exec:
            command:
            - curl
            - -sS
            - --fail
            - --connect-timeout
            - "5"
            - -o
            - /dev/null
            - echo-a:8080/public
        livenessProbe:
          timeoutSeconds: 7
          exec:
            command:
            - curl
            - -sS
            - --fail
            - --connect-timeout
            - "5"
            - -o
            - /dev/null
            - echo-a:8080/public
  selector:
    matchLabels:
      name: pod-to-a-allowed-cnp
  replicas: 1
apiVersion: apps/v1
kind: Deployment
---
metadata:
  name: pod-to-external-fqdn-allow-google-cnp
  labels:
    name: pod-to-external-fqdn-allow-google-cnp
    topology: any
    component: policy-check
    traffic: external
    quarantine: "false"
    type: autocheck
spec:
  template:
    metadata:
      labels:
        name: pod-to-external-fqdn-allow-google-cnp
    spec:
      hostNetwork: false
      containers:
      - name: pod-to-external-fqdn-allow-google-cnp-container
        ports: []
        image: docker.io/byrnedo/alpine-curl:0.1.8
        imagePullPolicy: IfNotPresent
        command:
        - /bin/ash
        - -c
        - sleep 1000000000
        readinessProbe:
          timeoutSeconds: 7
          exec:
            command:
            - curl
            - -sS
            - --fail
            - --connect-timeout
            - "5"
            - -o
            - /dev/null
            - www.google.com
        livenessProbe:
          timeoutSeconds: 7
          exec:
            command:
            - curl
            - -sS
            - --fail
            - --connect-timeout
            - "5"
            - -o
            - /dev/null
            - www.google.com
  selector:
    matchLabels:
      name: pod-to-external-fqdn-allow-google-cnp
  replicas: 1
apiVersion: apps/v1
kind: Deployment
---
metadata:
  name: pod-to-a-intra-node-proxy-egress-policy
  labels:
    name: pod-to-a-intra-node-proxy-egress-policy
    topology: intra-node
    component: proxy-check
    traffic: internal
    quarantine: "false"
    type: autocheck
spec:
  template:
    metadata:
      labels:
        name: pod-to-a-intra-node-proxy-egress-policy
    spec:
      hostNetwork: false
      containers:
      - name: pod-to-a-intra-node-proxy-egress-policy-allow-container
        ports: []
        image: docker.io/byrnedo/alpine-curl:0.1.8
        imagePullPolicy: IfNotPresent
        command:
        - /bin/ash
        - -c
        - sleep 1000000000
        readinessProbe:
          exec:
            command:
            - curl
            - -sS
            - --fail
            - --connect-timeout
            - "5"
            - -o
            - /dev/null
            - echo-a:8080/public
        livenessProbe:
          exec:
            command:
            - curl
            - -sS
            - --fail
            - --connect-timeout
            - "5"
            - -o
            - /dev/null
            - echo-a:8080/public
      - name: pod-to-a-intra-node-proxy-egress-policy-reject-container
        ports: []
        image: docker.io/byrnedo/alpine-curl:0.1.8
        imagePullPolicy: IfNotPresent
        command:
        - /bin/ash
        - -c
        - sleep 1000000000
        livenessProbe:
          timeoutSeconds: 7
          exec:
            command:
            - ash
            - -c
            - '! curl -s --fail --connect-timeout 5 -o /dev/null echo-a:8080/private'
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: name
                operator: In
                values:
                - echo-a
            topologyKey: kubernetes.io/hostname
  selector:
    matchLabels:
      name: pod-to-a-intra-node-proxy-egress-policy
  replicas: 1
apiVersion: apps/v1
kind: Deployment
---
metadata:
  name: pod-to-a-multi-node-proxy-egress-policy
  labels:
    name: pod-to-a-multi-node-proxy-egress-policy
    topology: multi-node
    component: proxy-check
    traffic: internal
    quarantine: "false"
    type: autocheck
spec:
  template:
    metadata:
      labels:
        name: pod-to-a-multi-node-proxy-egress-policy
    spec:
      hostNetwork: false
      containers:
      - name: pod-to-a-multi-node-proxy-egress-policy-allow-container
        ports: []
        image: docker.io/byrnedo/alpine-curl:0.1.8
        imagePullPolicy: IfNotPresent
        command:
        - /bin/ash
        - -c
        - sleep 1000000000
        readinessProbe:
          exec:
            command:
            - curl
            - -sS
            - --fail
            - --connect-timeout
            - "5"
            - -o
            - /dev/null
            - echo-a:8080/public
        livenessProbe:
          exec:
            command:
            - curl
            - -sS
            - --fail
            - --connect-timeout
            - "5"
            - -o
            - /dev/null
            - echo-a:8080/public
      - name: pod-to-a-multi-node-proxy-egress-policy-reject-container
        ports: []
        image: docker.io/byrnedo/alpine-curl:0.1.8
        imagePullPolicy: IfNotPresent
        command:
        - /bin/ash
        - -c
        - sleep 1000000000
        livenessProbe:
          timeoutSeconds: 7
          exec:
            command:
            - ash
            - -c
            - '! curl -s --fail --connect-timeout 5 -o /dev/null echo-a:8080/private'
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: name
                operator: In
                values:
                - echo-a
            topologyKey: kubernetes.io/hostname
  selector:
    matchLabels:
      name: pod-to-a-multi-node-proxy-egress-policy
  replicas: 1
apiVersion: apps/v1
kind: Deployment
---
metadata:
  name: pod-to-c-intra-node-proxy-ingress-policy
  labels:
    name: pod-to-c-intra-node-proxy-ingress-policy
    topology: intra-node
    component: proxy-check
    traffic: internal
    quarantine: "false"
    type: autocheck
spec:
  template:
    metadata:
      labels:
        name: pod-to-c-intra-node-proxy-ingress-policy
    spec:
      hostNetwork: false
      containers:
      - name: pod-to-c-intra-node-proxy-ingress-policy-allow-container
        ports: []
        image: docker.io/byrnedo/alpine-curl:0.1.8
        imagePullPolicy: IfNotPresent
        command:
        - /bin/ash
        - -c
        - sleep 1000000000
        readinessProbe:
          exec:
            command:
            - curl
            - -sS
            - --fail
            - --connect-timeout
            - "5"
            - -o
            - /dev/null
            - echo-c:8080/public
        livenessProbe:
          exec:
            command:
            - curl
            - -sS
            - --fail
            - --connect-timeout
            - "5"
            - -o
            - /dev/null
            - echo-c:8080/public
      - name: pod-to-c-intra-node-proxy-ingress-policy-reject-container
        ports: []
        image: docker.io/byrnedo/alpine-curl:0.1.8
        imagePullPolicy: IfNotPresent
        command:
        - /bin/ash
        - -c
        - sleep 1000000000
        livenessProbe:
          timeoutSeconds: 7
          exec:
            command:
            - ash
            - -c
            - '! curl -s --fail --connect-timeout 5 -o /dev/null echo-c:8080/private'
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: name
                operator: In
                values:
                - echo-c
            topologyKey: kubernetes.io/hostname
  selector:
    matchLabels:
      name: pod-to-c-intra-node-proxy-ingress-policy
  replicas: 1
apiVersion: apps/v1
kind: Deployment
---
metadata:
  name: pod-to-c-multi-node-proxy-ingress-policy
  labels:
    name: pod-to-c-multi-node-proxy-ingress-policy
    topology: multi-node
    component: proxy-check
    traffic: internal
    quarantine: "false"
    type: autocheck
spec:
  template:
    metadata:
      labels:
        name: pod-to-c-multi-node-proxy-ingress-policy
    spec:
      hostNetwork: false
      containers:
      - name: pod-to-c-multi-node-proxy-ingress-policy-allow-container
        ports: []
        image: docker.io/byrnedo/alpine-curl:0.1.8
        imagePullPolicy: IfNotPresent
        command:
        - /bin/ash
        - -c
        - sleep 1000000000
        readinessProbe:
          exec:
            command:
            - curl
            - -sS
            - --fail
            - --connect-timeout
            - "5"
            - -o
            - /dev/null
            - echo-c:8080/public
        livenessProbe:
          exec:
            command:
            - curl
            - -sS
            - --fail
            - --connect-timeout
            - "5"
            - -o
            - /dev/null
            - echo-c:8080/public
      - name: pod-to-c-multi-node-proxy-ingress-policy-reject-container
        ports: []
        image: docker.io/byrnedo/alpine-curl:0.1.8
        imagePullPolicy: IfNotPresent
        command:
        - /bin/ash
        - -c
        - sleep 1000000000
        livenessProbe:
          timeoutSeconds: 7
          exec:
            command:
            - ash
            - -c
            - '! curl -s --fail --connect-timeout 5 -o /dev/null echo-c:8080/private'
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: name
                operator: In
                values:
                - echo-c
            topologyKey: kubernetes.io/hostname
  selector:
    matchLabels:
      name: pod-to-c-multi-node-proxy-ingress-policy
  replicas: 1
apiVersion: apps/v1
kind: Deployment
---
metadata:
  name: pod-to-c-intra-node-proxy-to-proxy-policy
  labels:
    name: pod-to-c-intra-node-proxy-to-proxy-policy
    topology: intra-node
    component: proxy-check
    traffic: internal
    quarantine: "false"
    type: autocheck
spec:
  template:
    metadata:
      labels:
        name: pod-to-c-intra-node-proxy-to-proxy-policy
    spec:
      hostNetwork: false
      containers:
      - name: pod-to-c-intra-node-proxy-to-proxy-policy-allow-container
        ports: []
        image: docker.io/byrnedo/alpine-curl:0.1.8
        imagePullPolicy: IfNotPresent
        command:
        - /bin/ash
        - -c
        - sleep 1000000000
        readinessProbe:
          exec:
            command:
            - curl
            - -sS
            - --fail
            - --connect-timeout
            - "5"
            - -o
            - /dev/null
            - echo-c:8080/public
        livenessProbe:
          exec:
            command:
            - curl
            - -sS
            - --fail
            - --connect-timeout
            - "5"
            - -o
            - /dev/null
            - echo-c:8080/public
      - name: pod-to-c-intra-node-proxy-to-proxy-policy-reject-container
        ports: []
        image: docker.io/byrnedo/alpine-curl:0.1.8
        imagePullPolicy: IfNotPresent
        command:
        - /bin/ash
        - -c
        - sleep 1000000000
        livenessProbe:
          timeoutSeconds: 7
          exec:
            command:
            - ash
            - -c
            - '! curl -s --fail --connect-timeout 5 -o /dev/null echo-c:8080/private'
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: name
                operator: In
                values:
                - echo-c
            topologyKey: kubernetes.io/hostname
  selector:
    matchLabels:
      name: pod-to-c-intra-node-proxy-to-proxy-policy
  replicas: 1
apiVersion: apps/v1
kind: Deployment
---
metadata:
  name: pod-to-c-multi-node-proxy-to-proxy-policy
  labels:
    name: pod-to-c-multi-node-proxy-to-proxy-policy
    topology: multi-node
    component: proxy-check
    traffic: internal
    quarantine: "false"
    type: autocheck
spec:
  template:
    metadata:
      labels:
        name: pod-to-c-multi-node-proxy-to-proxy-policy
    spec:
      hostNetwork: false
      containers:
      - name: pod-to-c-multi-node-proxy-to-proxy-policy-allow-container
        ports: []
        image: docker.io/byrnedo/alpine-curl:0.1.8
        imagePullPolicy: IfNotPresent
        command:
        - /bin/ash
        - -c
        - sleep 1000000000
        readinessProbe:
          exec:
            command:
            - curl
            - -sS
            - --fail
            - --connect-timeout
            - "5"
            - -o
            - /dev/null
            - echo-c:8080/public
        livenessProbe:
          exec:
            command:
            - curl
            - -sS
            - --fail
            - --connect-timeout
            - "5"
            - -o
            - /dev/null
            - echo-c:8080/public
      - name: pod-to-c-multi-node-proxy-to-proxy-policy-reject-container
        ports: []
        image: docker.io/byrnedo/alpine-curl:0.1.8
        imagePullPolicy: IfNotPresent
        command:
        - /bin/ash
        - -c
        - sleep 1000000000
        livenessProbe:
          timeoutSeconds: 7
          exec:
            command:
            - ash
            - -c
            - '! curl -s --fail --connect-timeout 5 -o /dev/null echo-c:8080/private'
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: name
                operator: In
                values:
                - echo-c
            topologyKey: kubernetes.io/hostname
  selector:
    matchLabels:
      name: pod-to-c-multi-node-proxy-to-proxy-policy
  replicas: 1
apiVersion: apps/v1
kind: Deployment
---
metadata:
  name: pod-to-b-multi-node-clusterip
  labels:
    name: pod-to-b-multi-node-clusterip
    topology: multi-node
    component: services-check
    traffic: internal
    quarantine: "false"
    type: autocheck
spec:
  template:
    metadata:
      labels:
        name: pod-to-b-multi-node-clusterip
    spec:
      hostNetwork: false
      containers:
      - name: pod-to-b-multi-node-clusterip-container
        ports: []
        image: docker.io/byrnedo/alpine-curl:0.1.8
        imagePullPolicy: IfNotPresent
        command:
        - /bin/ash
        - -c
        - sleep 1000000000
        readinessProbe:
          timeoutSeconds: 7
          exec:
            command:
            - curl
            - -sS
            - --fail
            - --connect-timeout
            - "5"
            - -o
            - /dev/null
            - echo-b:8080/public
        livenessProbe:
          timeoutSeconds: 7
          exec:
            command:
            - curl
            - -sS
            - --fail
            - --connect-timeout
            - "5"
            - -o
            - /dev/null
            - echo-b:8080/public
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: name
                operator: In
                values:
                - echo-b
            topologyKey: kubernetes.io/hostname
  selector:
    matchLabels:
      name: pod-to-b-multi-node-clusterip
  replicas: 1
apiVersion: apps/v1
kind: Deployment
---
metadata:
  name: pod-to-b-multi-node-headless
  labels:
    name: pod-to-b-multi-node-headless
    topology: multi-node
    component: services-check
    traffic: internal
    quarantine: "false"
    type: autocheck
spec:
  template:
    metadata:
      labels:
        name: pod-to-b-multi-node-headless
    spec:
      hostNetwork: false
      containers:
      - name: pod-to-b-multi-node-headless-container
        ports: []
        image: docker.io/byrnedo/alpine-curl:0.1.8
        imagePullPolicy: IfNotPresent
        command:
        - /bin/ash
        - -c
        - sleep 1000000000
        readinessProbe:
          timeoutSeconds: 7
          exec:
            command:
            - curl
            - -sS
            - --fail
            - --connect-timeout
            - "5"
            - -o
            - /dev/null
            - echo-b-headless:8080/public
        livenessProbe:
          timeoutSeconds: 7
          exec:
            command:
            - curl
            - -sS
            - --fail
            - --connect-timeout
            - "5"
            - -o
            - /dev/null
            - echo-b-headless:8080/public
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: name
                operator: In
                values:
                - echo-b
            topologyKey: kubernetes.io/hostname
  selector:
    matchLabels:
      name: pod-to-b-multi-node-headless
  replicas: 1
apiVersion: apps/v1
kind: Deployment
---
metadata:
  name: host-to-b-multi-node-clusterip
  labels:
    name: host-to-b-multi-node-clusterip
    topology: multi-node
    component: services-check
    traffic: internal
    quarantine: "false"
    type: autocheck
spec:
  template:
    metadata:
      labels:
        name: host-to-b-multi-node-clusterip
    spec:
      hostNetwork: true
      containers:
      - name: host-to-b-multi-node-clusterip-container
        ports: []
        image: docker.io/byrnedo/alpine-curl:0.1.8
        imagePullPolicy: IfNotPresent
        command:
        - /bin/ash
        - -c
        - sleep 1000000000
        readinessProbe:
          timeoutSeconds: 7
          exec:
            command:
            - curl
            - -sS
            - --fail
            - --connect-timeout
            - "5"
            - -o
            - /dev/null
            - echo-b:8080/public
        livenessProbe:
          timeoutSeconds: 7
          exec:
            command:
            - curl
            - -sS
            - --fail
            - --connect-timeout
            - "5"
            - -o
            - /dev/null
            - echo-b:8080/public
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: name
                operator: In
                values:
                - echo-b
            topologyKey: kubernetes.io/hostname
      dnsPolicy: ClusterFirstWithHostNet
  selector:
    matchLabels:
      name: host-to-b-multi-node-clusterip
  replicas: 1
apiVersion: apps/v1
kind: Deployment
---
metadata:
  name: host-to-b-multi-node-headless
  labels:
    name: host-to-b-multi-node-headless
    topology: multi-node
    component: services-check
    traffic: internal
    quarantine: "false"
    type: autocheck
spec:
  template:
    metadata:
      labels:
        name: host-to-b-multi-node-headless
    spec:
      hostNetwork: true
      containers:
      - name: host-to-b-multi-node-headless-container
        ports: []
        image: docker.io/byrnedo/alpine-curl:0.1.8
        imagePullPolicy: IfNotPresent
        command:
        - /bin/ash
        - -c
        - sleep 1000000000
        readinessProbe:
          timeoutSeconds: 7
          exec:
            command:
            - curl
            - -sS
            - --fail
            - --connect-timeout
            - "5"
            - -o
            - /dev/null
            - echo-b-headless:8080/public
        livenessProbe:
          timeoutSeconds: 7
          exec:
            command:
            - curl
            - -sS
            - --fail
            - --connect-timeout
            - "5"
            - -o
            - /dev/null
            - echo-b-headless:8080/public
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: name
                operator: In
                values:
                - echo-b
            topologyKey: kubernetes.io/hostname
      dnsPolicy: ClusterFirstWithHostNet
  selector:
    matchLabels:
      name: host-to-b-multi-node-headless
  replicas: 1
apiVersion: apps/v1
kind: Deployment
---
metadata:
  name: pod-to-b-multi-node-hostport
  labels:
    name: pod-to-b-multi-node-hostport
    topology: multi-node
    component: hostport-check
    traffic: internal
    quarantine: "false"
    type: autocheck
spec:
  template:
    metadata:
      labels:
        name: pod-to-b-multi-node-hostport
    spec:
      hostNetwork: false
      containers:
      - name: pod-to-b-multi-node-hostport-container
        ports: []
        image: docker.io/byrnedo/alpine-curl:0.1.8
        imagePullPolicy: IfNotPresent
        command:
        - /bin/ash
        - -c
        - sleep 1000000000
        readinessProbe:
          timeoutSeconds: 7
          exec:
            command:
            - curl
            - -sS
            - --fail
            - --connect-timeout
            - "5"
            - -o
            - /dev/null
            - echo-b-host-headless:40000/public
        livenessProbe:
          timeoutSeconds: 7
          exec:
            command:
            - curl
            - -sS
            - --fail
            - --connect-timeout
            - "5"
            - -o
            - /dev/null
            - echo-b-host-headless:40000/public
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: name
                operator: In
                values:
                - echo-b
            topologyKey: kubernetes.io/hostname
  selector:
    matchLabels:
      name: pod-to-b-multi-node-hostport
  replicas: 1
apiVersion: apps/v1
kind: Deployment
---
metadata:
  name: pod-to-b-intra-node-hostport
  labels:
    name: pod-to-b-intra-node-hostport
    topology: intra-node
    component: hostport-check
    traffic: internal
    quarantine: "false"
    type: autocheck
spec:
  template:
    metadata:
      labels:
        name: pod-to-b-intra-node-hostport
    spec:
      hostNetwork: false
      containers:
      - name: pod-to-b-intra-node-hostport-container
        ports: []
        image: docker.io/byrnedo/alpine-curl:0.1.8
        imagePullPolicy: IfNotPresent
        command:
        - /bin/ash
        - -c
        - sleep 1000000000
        readinessProbe:
          timeoutSeconds: 7
          exec:
            command:
            - curl
            - -sS
            - --fail
            - --connect-timeout
            - "5"
            - -o
            - /dev/null
            - echo-b-host-headless:40000/public
        livenessProbe:
          timeoutSeconds: 7
          exec:
            command:
            - curl
            - -sS
            - --fail
            - --connect-timeout
            - "5"
            - -o
            - /dev/null
            - echo-b-host-headless:40000/public
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: name
                operator: In
                values:
                - echo-b
            topologyKey: kubernetes.io/hostname
  selector:
    matchLabels:
      name: pod-to-b-intra-node-hostport
  replicas: 1
apiVersion: apps/v1
kind: Deployment
---
metadata:
  name: pod-to-b-multi-node-nodeport
  labels:
    name: pod-to-b-multi-node-nodeport
    topology: multi-node
    component: nodeport-check
    traffic: internal
    quarantine: "false"
    type: autocheck
spec:
  template:
    metadata:
      labels:
        name: pod-to-b-multi-node-nodeport
    spec:
      hostNetwork: false
      containers:
      - name: pod-to-b-multi-node-nodeport-container
        ports: []
        image: docker.io/byrnedo/alpine-curl:0.1.8
        imagePullPolicy: IfNotPresent
        command:
        - /bin/ash
        - -c
        - sleep 1000000000
        readinessProbe:
          timeoutSeconds: 7
          exec:
            command:
            - curl
            - -sS
            - --fail
            - --connect-timeout
            - "5"
            - -o
            - /dev/null
            - echo-b-host-headless:31313/public
        livenessProbe:
          timeoutSeconds: 7
          exec:
            command:
            - curl
            - -sS
            - --fail
            - --connect-timeout
            - "5"
            - -o
            - /dev/null
            - echo-b-host-headless:31313/public
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: name
                operator: In
                values:
                - echo-b
            topologyKey: kubernetes.io/hostname
  selector:
    matchLabels:
      name: pod-to-b-multi-node-nodeport
  replicas: 1
apiVersion: apps/v1
kind: Deployment
---
metadata:
  name: pod-to-b-intra-node-nodeport
  labels:
    name: pod-to-b-intra-node-nodeport
    topology: intra-node
    component: nodeport-check
    traffic: internal
    quarantine: "false"
    type: autocheck
spec:
  template:
    metadata:
      labels:
        name: pod-to-b-intra-node-nodeport
    spec:
      hostNetwork: false
      containers:
      - name: pod-to-b-intra-node-nodeport-container
        ports: []
        image: docker.io/byrnedo/alpine-curl:0.1.8
        imagePullPolicy: IfNotPresent
        command:
        - /bin/ash
        - -c
        - sleep 1000000000
        readinessProbe:
          timeoutSeconds: 7
          exec:
            command:
            - curl
            - -sS
            - --fail
            - --connect-timeout
            - "5"
            - -o
            - /dev/null
            - echo-b-host-headless:31313/public
        livenessProbe:
          timeoutSeconds: 7
          exec:
            command:
            - curl
            - -sS
            - --fail
            - --connect-timeout
            - "5"
            - -o
            - /dev/null
            - echo-b-host-headless:31313/public
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: name
                operator: In
                values:
                - echo-b
            topologyKey: kubernetes.io/hostname
  selector:
    matchLabels:
      name: pod-to-b-intra-node-nodeport
  replicas: 1
apiVersion: apps/v1
kind: Deployment
---
metadata:
  name: echo-a
  labels:
    name: echo-a
    topology: any
    component: network-check
    traffic: internal
    quarantine: "false"
    type: autocheck
spec:
  ports:
  - name: http
    port: 8080
  type: ClusterIP
  selector:
    name: echo-a
  ipFamilyPolicy: PreferDualStack
apiVersion: v1
kind: Service
---
metadata:
  name: echo-b
  labels:
    name: echo-b
    topology: any
    component: services-check
    traffic: internal
    quarantine: "false"
    type: autocheck
spec:
  ports:
  - name: http
    port: 8080
    nodePort: 31313
  type: NodePort
  selector:
    name: echo-b
  ipFamilyPolicy: PreferDualStack
apiVersion: v1
kind: Service
---
metadata:
  name: echo-c
  labels:
    name: echo-c
    topology: any
    component: proxy-check
    traffic: internal
    quarantine: "false"
    type: autocheck
spec:
  ports:
  - name: http
    port: 8080
  type: ClusterIP
  selector:
    name: echo-c
  ipFamilyPolicy: PreferDualStack
apiVersion: v1
kind: Service
---
metadata:
  name: echo-b-headless
  labels:
    name: echo-b-headless
    topology: any
    component: services-check
    traffic: internal
    quarantine: "false"
    type: autocheck
spec:
  ports:
  - name: http
    port: 8080
  type: ClusterIP
  selector:
    name: echo-b
  ipFamilyPolicy: PreferDualStack
  clusterIP: None
apiVersion: v1
kind: Service
---
metadata:
  name: echo-b-host-headless
  labels:
    name: echo-b-host-headless
    topology: any
    component: services-check
    traffic: internal
    quarantine: "false"
    type: autocheck
spec:
  ports: []
  type: ClusterIP
  selector:
    name: echo-b-host
  ipFamilyPolicy: PreferDualStack
  clusterIP: None
apiVersion: v1
kind: Service
---
metadata:
  name: echo-c-headless
  labels:
    name: echo-c-headless
    topology: any
    component: proxy-check
    traffic: internal
    quarantine: "false"
    type: autocheck
spec:
  ports:
  - name: http
    port: 8080
  type: ClusterIP
  selector:
    name: echo-c
  ipFamilyPolicy: PreferDualStack
  clusterIP: None
apiVersion: v1
kind: Service
---
metadata:
  name: echo-c-host-headless
  labels:
    name: echo-c-host-headless
    topology: any
    component: proxy-check
    traffic: internal
    quarantine: "false"
    type: autocheck
spec:
  ports: []
  type: ClusterIP
  selector:
    name: echo-c-host
  ipFamilyPolicy: PreferDualStack
  clusterIP: None
apiVersion: v1
kind: Service
---
metadata:
  name: pod-to-a-denied-cnp
  labels:
    name: pod-to-a-denied-cnp
    topology: any
    component: policy-check
    traffic: internal
    quarantine: "false"
    type: autocheck
spec:
  endpointSelector:
    matchLabels:
      name: pod-to-a-denied-cnp
  egress:
  - toPorts:
    - ports:
      - port: "53"
        protocol: ANY
    toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s:k8s-app: kube-dns
  - toPorts:
    - ports:
      - port: "5353"
        protocol: UDP
    toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: openshift-dns
        k8s:dns.operator.openshift.io/daemonset-dns: default
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
---
metadata:
  name: pod-to-a-allowed-cnp
  labels:
    name: pod-to-a-allowed-cnp
    topology: any
    component: policy-check
    traffic: internal
    quarantine: "false"
    type: autocheck
spec:
  endpointSelector:
    matchLabels:
      name: pod-to-a-allowed-cnp
  egress:
  - toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
    toEndpoints:
    - matchLabels:
        name: echo-a
  - toPorts:
    - ports:
      - port: "53"
        protocol: ANY
    toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s:k8s-app: kube-dns
  - toPorts:
    - ports:
      - port: "5353"
        protocol: UDP
    toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: openshift-dns
        k8s:dns.operator.openshift.io/daemonset-dns: default
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
---
metadata:
  name: pod-to-external-fqdn-allow-google-cnp
  labels:
    name: pod-to-external-fqdn-allow-google-cnp
    topology: any
    component: policy-check
    traffic: external
    quarantine: "false"
    type: autocheck
spec:
  endpointSelector:
    matchLabels:
      name: pod-to-external-fqdn-allow-google-cnp
  egress:
  - toFQDNs:
    - matchPattern: '*.google.com'
  - toPorts:
    - ports:
      - port: "53"
        protocol: ANY
      rules:
        dns:
        - matchPattern: '*'
    toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s:k8s-app: kube-dns
  - toPorts:
    - ports:
      - port: "5353"
        protocol: UDP
      rules:
        dns:
        - matchPattern: '*'
    toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: openshift-dns
        k8s:dns.operator.openshift.io/daemonset-dns: default
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
---
metadata:
  name: pod-to-a-intra-node-proxy-egress-policy
  labels:
    name: pod-to-a-intra-node-proxy-egress-policy
    topology: intra-node
    component: proxy-check
    traffic: internal
    quarantine: "false"
    type: autocheck
spec:
  endpointSelector:
    matchLabels:
      name: pod-to-a-intra-node-proxy-egress-policy
  egress:
  - toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
      rules:
        http:
        - path: /public$
          method: GET
    toEndpoints:
    - matchLabels:
        name: echo-a
  - toPorts:
    - ports:
      - port: "53"
        protocol: ANY
    toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s:k8s-app: kube-dns
  - toPorts:
    - ports:
      - port: "5353"
        protocol: UDP
    toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: openshift-dns
        k8s:dns.operator.openshift.io/daemonset-dns: default
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
---
metadata:
  name: pod-to-a-multi-node-proxy-egress-policy
  labels:
    name: pod-to-a-multi-node-proxy-egress-policy
    topology: multi-node
    component: proxy-check
    traffic: internal
    quarantine: "false"
    type: autocheck
spec:
  endpointSelector:
    matchLabels:
      name: pod-to-a-multi-node-proxy-egress-policy
  egress:
  - toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
      rules:
        http:
        - path: /public$
          method: GET
    toEndpoints:
    - matchLabels:
        name: echo-a
  - toPorts:
    - ports:
      - port: "53"
        protocol: ANY
    toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s:k8s-app: kube-dns
  - toPorts:
    - ports:
      - port: "5353"
        protocol: UDP
    toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: openshift-dns
        k8s:dns.operator.openshift.io/daemonset-dns: default
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
---
metadata:
  name: pod-to-c-intra-node-proxy-to-proxy-policy
  labels:
    name: pod-to-c-intra-node-proxy-to-proxy-policy
    topology: intra-node
    component: proxy-check
    traffic: internal
    quarantine: "false"
    type: autocheck
spec:
  endpointSelector:
    matchLabels:
      name: pod-to-c-intra-node-proxy-to-proxy-policy
  egress:
  - toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
      rules:
        http:
        - path: /public$
          method: GET
    toEndpoints:
    - matchLabels:
        name: echo-c
  - toPorts:
    - ports:
      - port: "53"
        protocol: ANY
    toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s:k8s-app: kube-dns
  - toPorts:
    - ports:
      - port: "5353"
        protocol: UDP
    toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: openshift-dns
        k8s:dns.operator.openshift.io/daemonset-dns: default
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
---
metadata:
  name: pod-to-c-multi-node-proxy-to-proxy-policy
  labels:
    name: pod-to-c-multi-node-proxy-to-proxy-policy
    topology: multi-node
    component: proxy-check
    traffic: internal
    quarantine: "false"
    type: autocheck
spec:
  endpointSelector:
    matchLabels:
      name: pod-to-c-multi-node-proxy-to-proxy-policy
  egress:
  - toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
      rules:
        http:
        - path: /public$
          method: GET
    toEndpoints:
    - matchLabels:
        name: echo-c
  - toPorts:
    - ports:
      - port: "53"
        protocol: ANY
    toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s:k8s-app: kube-dns
  - toPorts:
    - ports:
      - port: "5353"
        protocol: UDP
    toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: openshift-dns
        k8s:dns.operator.openshift.io/daemonset-dns: default
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
---
metadata:
  name: echo-c
  labels:
    name: echo-c
    topology: any
    component: proxy-check
    traffic: internal
    quarantine: "false"
    type: autocheck
spec:
  endpointSelector:
    matchLabels:
      name: echo-c
  ingress:
  - toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
      rules:
        http:
        - path: /public$
          method: GET
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
